# pyglotaran

./: .codecov.yml  .coveragerc  .git-blame-ignore-revs  .gitignore  .gitmodules  .jupyter_config.py  .pre-commit-config.yaml  .ruff-notebooks.toml  .ruff.toml  .setup.py.swp  .sonarcloud.properties  .sourcery.yaml  .taplo.toml  .travis.yml  .zenodo.json  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  INSTALLATION.md  MANIFEST  MANIFEST.in  Makefile  NOTICE.md  README.md  Vagrantfile  appveyor.yml  bench_comment.py  calculateC.pyx  changelog.md  codecov.yml  flake.nix  large_example_irf_disp.py  open_vagrant-jupyter.html  pyproject.toml  readthedocs.yml  requirements_dev.txt  requirements_pinned.txt  setup.cfg  (+3 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml  test_result_consistency.py
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md  question.md  refactor.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix_PR.md  docs_PR.md  feature_PR.md  refactor_PR.md
.github/workflows/: CI_CD_actions.yml  autoupdate-pre-commit-config.yml  benchmark.yml  binder-on-pr.yml  codeowners-validator.yml  codeowners_validator.yml  codeql.yml  doxygen.yml  full_benchmark.yml  integration-tests.yml  pr_benchmark.yml  pr_benchmark_reaction.yml  release-validataion.yml  release-validation.yml  sanity.yml  trigger-binder.yml
benchmark/: asv.conf.json
benchmark/benchmarks/: __init__.py  benchmarks.py
binder/: environment.yml  postBuild
docs/: Doxyfile.ini  Makefile  api_documentation.rst  conf.py  credits.rst  doc-dependencies.txt  environment.yml  generate_api_documentation.py  generate_api_pages.py  how_to_in_depth.rst  index.rst  installation.rst  make.bat  remove_notebook_written_data.py  requirements.txt  strip_empty_notebook_cells.py  usage.rst
docs/_templates/: api_documentation_template.rst  known_packages.rst  known_packages_template.rst
docs/api_pages/: dataio.rst  fitmodel.rst
docs/in_depth_explanaitions/: documentation_in_dephs.rst  virtual_envs_in_depth.rst
docs/in_depth_explanations/: documentation_in_depths.rst
docs/scientific_docs/: case_studies.rst  experiments.rst  scientific_background.rst
docs/source/: api_documentation.md  api_documentation.rst  authors.md  changelog.md  conf.py  generate_api_doc.py  index.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  plugin_dev.md  plugin_dev.rst  quickstart.rst
example/: example_model_spec.yml  parameter.csv  simple_kinetic_multiple_datasets.py
example/data/: F15_S1_TR4_slit40_AnalInt_Scanspeed1_250uW_1_JIT_BG1_SH_12112014noColim.ascii  F15_S2_TR4_slit40_AnalInt_Scanspeed1_250uW_1_JIT_BG1_SH_12112014noColim.ascii  FUD7_S1_TR4_slit40_AnalInt_Scanspeed1_250uW_1_JIT_BG1_SH_12112014noColim.ascii  FUD7_S2_TR4_slit40_AnalInt_Scanspeed1_250uW_1_JIT_BG1_SH_12112014noColim.ascii  M18_S1_TR4_slit40_AnalInt_Scanspeed1_250uW_1_JIT_BG1_SH_12112014noColim.ascii  WT_S1_TR4_slit40_AnalInt_Scanspeed1_250kHz_250uW_JIT_BG_SH_12112014noColim.ascii
examples/01-fluorescence/: README.md  analysis.ipynb  parameters.yaml  scheme.yaml
examples/2017_Snellenburg_Chlamy_77K/: Case_Study_Chlamy-mutants.yml  example_model_spec_csv_file.yml  example_modelspec_csv_parameter.yml
examples/tutorials/: README.md
glotaran/: __init__.py  plugin_system.py
glotaran-core/: .model.py.swp  calculateC.c  calculateC.pyx
glotaran/analysis/: __init__.py  dataset.py  fitresult.py  fitting.py  grouping.py  matrix_calculation.py  nnls.py  optimization_group.py  optimization_group_calculator.py  optimization_group_calculator_grouped.py  optimization_group_calculator_linked.py  optimization_group_calculator_ungrouped.py  optimization_group_calculator_unlinked.py  optimize.py  optimize_multicore.py  optimizer.py  optimizer_proxy.py  parameter_server.py  problem.py  problem_bag.py  problem_grouped.py  problem_ungrouped.py  residual_calculation.py  result.py  scheme.py  simulation.py  util.py  variable_projection.py
glotaran/builtin/: __init__.py
glotaran/cli/: __init__.py  glotaran_click_group.py  main.py  util.py
glotaran/dashboard/: intensity_map_browser.py
glotaran/dataio/: __init__.py  chlorospec_format.py  file_readers.py  legacy_readers.py  mapper.py  mlsd_file_format.py  specialized_datasets.py  wavelength_time_explicit_file.py
glotaran/datasets/: dataset.py  mlsd_file_format.py  specialized_datasets.py  spectral_temporal_dataset.py  spectral_timetrace.py  wavelength_time_explicit_file.py
glotaran/deprecation/: __init__.py  deprecation_utils.py
glotaran/examples/: __init__.py  parallel_spectral_decay.py  sequential.py  sequential_spectral_decay.py
glotaran/fitmodel/: __init__.py  c_matrix.py  fitmodel.py  grouping.py  matrix.py  matrix_group.py  matrix_group_generator.py  qr_decomposition.py  result.py
glotaran/io/: io.py  (+12 more)
glotaran_cli/: main.py
glotaran_core/: __init__.py  constraints.py  dataset.py  datasets.py  fit_model.py  global_analysis.py  kinetic_model.py  megacomplex.py  model.py  models.py  parameter.py  result.py
glotaran_tools/: __init__.py  model_spec_yaml.py  simulated_spectral_timetrace.py  spectral_timetrace.py  timetrace.py  wavelength_time_excplicit_file.py  wavelength_time_explicit_file.py
notebook/: Example Modelling.ipynb  Example Multidecay Different Amplitudes Multiple Channels With Irf.ipynb  Example Multidecay Different Amplitudes Multiple Channels.ipynb  Example Multidecay Different Amplitudes.ipynb  Example Multiple Decay Single Gaussian Irf.ipynb  Example Simple Decay .ipynb  Example Simple Decay Multiple K-Matrices.ipynb  Example Simple Decay Multiple Megacomplexes.ipynb  Example Simple Decay Singe Gaussian Ir.ipynb  Example Simple Decay With Initial Concentrations.ipynb  Example Simple Decay.ipynb  Example.ipynb  R Package TIMP showcase.ipynb  getting_started.ipynb
profiling/: R_compare_three_decays_with_irf.R  R_compare_three_decays_with_irf.py  single_decay.py  single_decay_with_irf.py  three_decay_with_irf.py
tests/: __init__.py  list_of_tests.md  varpro_proof_of_concept_test.py
(+1914 files in other folders)
