[metadata]
name = pyglotaran
version = attr: glotaran.__version__
description = The Glotaran fitting engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glotaran/pyglotaran
author = Joern Weissenborn, Joris Snellenburg, Ivo van Stokkum
author_email = joern.weissenborn@gmail.com, j.snellenburg@gmail.com, i.h.m.van.stokkum@vu.nl
license = LGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Glotaran Ecosystem=https://glotaran.org
    Documentation=https://pyglotaran.readthedocs.io
    Changelog=https://pyglotaran.readthedocs.io/en/latest/changelog.html
    Source=https://github.com/glotaran/pyglotaran
    Tracker=https://github.com/glotaran/pyglotaran/issues

[options]
packages = find:
install_requires =
    asteval>=0.9.21
    click>=7.0
    netCDF4>=1.5.3
    numba>=0.52
    numpy>=1.20.0
    pandas>=0.25.2
    pyyaml>=5.2
    rich>=10.9.0
    scipy>=1.3.2
    sdtfile>=2020.8.3
    setuptools>=41.2
    tabulate>=0.8.8
    typing_inspect>=0.7.1
    xarray>=0.16.2
python_requires = >=3.8, <3.10
setup_requires =
    setuptools>=41.2
tests_require = pytest
zip_safe = True

[options.entry_points]
console_scripts =
    glotaran=glotaran.cli.main:main
glotaran.plugins.data_io =
    ascii = glotaran.builtin.io.ascii.wavelength_time_explicit_file
    sdt = glotaran.builtin.io.sdt.sdt_file_reader
    nc = glotaran.builtin.io.netCDF.netCDF
glotaran.plugins.megacomplexes =
    baseline = glotaran.builtin.megacomplexes.baseline
    coherent_artifact = glotaran.builtin.megacomplexes.coherent_artifact
    damped_oscillation = glotaran.builtin.megacomplexes.damped_oscillation
    decay = glotaran.builtin.megacomplexes.decay
    spectral = glotaran.builtin.megacomplexes.spectral
glotaran.plugins.project_io =
    yml = glotaran.builtin.io.yml.yml
    csv = glotaran.builtin.io.pandas.csv
    folder = glotaran.builtin.io.folder.folder_plugin

[aliases]
test = pytest

[rstcheck]
ignore_directives = autoattribute,autoclass,autoexception,autofunction,automethod,automodule,highlight,click
ignore_messages = xarraydoc

[darglint]
docstring_style = numpy
ignore_regex = test_.+|.*wrapper.*|inject_warn_into_call|.*dummy.*|__(str|eq)__

[pydocstyle]
convention = numpy

[mypy]
ignore_missing_imports = True
scripts_are_modules = True
show_error_codes = True

[mypy-glotaran.*]
ignore_errors = True

[mypy-glotaran.plugin_system.*]
ignore_errors = False

[mypy-glotaran.utils.*]
ignore_errors = False

[mypy-glotaran.deprecation.*]
ignore_errors = False
