[metadata]
name = pyglotaran
version = attr: glotaran.__version__
description = The Glotaran fitting engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glotaran/pyglotaran
author = Joern Weissenborn, Joris Snellenburg, Ivo van Stokkum
author_email = joern.weissenborn@gmail.com, j.snellenburg@gmail.com, i.h.m.van.stokkum@vu.nl
license = LGPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Glotaran Ecosystem=https://glotaran.org
    Documentation=https://pyglotaran.readthedocs.io
    Changelog=https://pyglotaran.readthedocs.io/en/latest/changelog.html
    Source=https://github.com/glotaran/pyglotaran
    Tracker=https://github.com/glotaran/pyglotaran/issues

[options]
packages = find:
install_requires =
    asteval>=0.9.21
    click>=7.0
    netCDF4>=1.5.3
    numba>=0.52
    numpy>=1.20.0,<1.22
    odfpy>=1.4.1
    openpyxl>=3.0.9
    pandas>=0.25.2
    rich>=10.9.0
    ruamel.yaml>=0.17.17
    scipy>=1.3.2
    sdtfile>=2020.8.3
    setuptools>=41.2
    tabulate>=0.8.8
    xarray!=0.20.0,!=0.20.1,!=0.21.0,>=0.16.2
python_requires = >=3.8, <3.11
setup_requires =
    setuptools>=41.2
tests_require = pytest
zip_safe = True

[options.entry_points]
console_scripts =
    glotaran=glotaran.cli.main:main
glotaran.plugins.data_io =
    ascii = glotaran.builtin.io.ascii.wavelength_time_explicit_file
    sdt = glotaran.builtin.io.sdt.sdt_file_reader
    nc = glotaran.builtin.io.netCDF.netCDF
glotaran.plugins.megacomplexes =
    baseline = glotaran.builtin.megacomplexes.baseline
    clp_guide = glotaran.builtin.megacomplexes.clp_guide
    coherent_artifact = glotaran.builtin.megacomplexes.coherent_artifact
    damped_oscillation = glotaran.builtin.megacomplexes.damped_oscillation
    decay = glotaran.builtin.megacomplexes.decay
    spectral = glotaran.builtin.megacomplexes.spectral
glotaran.plugins.project_io =
    yml = glotaran.builtin.io.yml.yml
    csv = glotaran.builtin.io.pandas.csv
    tsv = glotaran.builtin.io.pandas.tsv
    xlsx = glotaran.builtin.io.pandas.xlsx
    folder = glotaran.builtin.io.folder.folder_plugin

[aliases]
test = pytest

[rstcheck]
ignore_directives = autoattribute,autoclass,autoexception,autofunction,automethod,automodule,highlight,click
ignore_messages = xarraydoc

[darglint]
docstring_style = numpy
ignore_regex = test_.+|.*wrapper.*|inject_warn_into_call|.*dummy.*|__(.+?)__

[mypy]
ignore_missing_imports = True
scripts_are_modules = True
show_error_codes = True

[mypy-glotaran.*]
ignore_errors = True

[mypy-glotaran.plugin_system.*]
ignore_errors = False

[mypy-glotaran.utils.*]
ignore_errors = False

[mypy-glotaran.deprecation.*]
ignore_errors = False

[mypy-glotaran.parameter.*]
ignore_errors = False

[mypy-glotaran.project.*]
ignore_errors = False

[mypy-glotaran.simulation.*]
ignore_errors = False

[mypy-glotaran.model.property]
ignore_errors = False

[mypy-glotaran.builtin.io.pandas.*]
ignore_errors = False
