[metadata]
name = pyglotaran
version = attr: glotaran.__version__
description = The Glotaran fitting engine.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glotaran/pyglotaran
author = Joern Weissenborn, Joris Snellenburg, Sebastian Weigand, Ivo van Stokkum
author_email = joern.weissenborn@gmail.com, j.snellenburg@gmail.com, s.weigand.phy@gmail.com, i.h.m.van.stokkum@vu.nl
license = LGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Glotaran Ecosystem=https://glotaran.org
    Documentation=https://pyglotaran.readthedocs.io
    Changelog=https://pyglotaran.readthedocs.io/en/latest/changelog.html
    Source=https://github.com/glotaran/pyglotaran
    Tracker=https://github.com/glotaran/pyglotaran/issues

[options]
packages = find:
install_requires =
    asteval!=0.9.28,>=0.9.22
    attrs>=22.1.0
    click>=8.1.3
    netCDF4>=1.5.7
    numba>=0.55.0
    numpy>=1.21.2,<2.1
    odfpy>=1.4.1
    openpyxl>=3.0.10
    pandas>=1.3.4
    pydantic>=2.7.2
    ruamel.yaml>=0.17.17
    scipy>=1.7.2
    sdtfile>=2020.8.3
    tabulate>=0.8.9
    xarray>=2022.3.0
python_requires = >=3.10, <3.13
tests_require = pytest
zip_safe = True

[options.entry_points]
console_scripts =
    glotaran=glotaran.cli.main:main
glotaran.plugins.data_io =
    ascii = glotaran.builtin.io.ascii.wavelength_time_explicit_file
    sdt = glotaran.builtin.io.sdt.sdt_file_reader
    nc = glotaran.builtin.io.netCDF.netCDF
glotaran.plugins.megacomplexes =
    baseline = glotaran.builtin.megacomplexes.baseline
    clp_guide = glotaran.builtin.megacomplexes.clp_guide
    coherent_artifact = glotaran.builtin.megacomplexes.coherent_artifact
    damped_oscillation = glotaran.builtin.megacomplexes.damped_oscillation
    pfid = glotaran.builtin.megacomplexes.pfid
    decay = glotaran.builtin.megacomplexes.decay
    spectral = glotaran.builtin.megacomplexes.spectral
glotaran.plugins.project_io =
    yml = glotaran.builtin.io.yml.yml
    csv = glotaran.builtin.io.pandas.csv
    tsv = glotaran.builtin.io.pandas.tsv
    xlsx = glotaran.builtin.io.pandas.xlsx
    folder = glotaran.builtin.io.folder.folder_plugin

[options.extras_require]
extras =
    pyglotaran-extras>=0.5.0
full =
    pyglotaran[extras]
    pyglotaran[notebook]
notebook =
    ipykernel>=6.23.1
    jupyterlab>=4.0.0

[aliases]
test = pytest

[rstcheck]
ignore_directives = include,autosummary,click
ignore_messages = xarraydoc
report_level = WARNING

[darglint]
docstring_style = numpy
ignore_regex = test_.+|.*wrapper.*|inject_warn_into_call|.*dummy.*|__(.+?)__
